--- a/simple.html
+++ b/simple.html
@@ -17,11 +17,11 @@ Copyright message
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Hey its the meerge confilc
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Ak Ak production</p>
 	</footer>
 </body>
 </html>
