Changes to simple.txt from masster branch

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright message
 -->
 <head>
-	<title>Example website</title>
+	<title>Awesome website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ Copyright message
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just not some content, but more than that.
 		</p>
 	</main>
 	<footer class="container">
