--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright message
 -->
 <head>
-	<title>Awesome website</title>
+	<title>Awesome AMAn</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
